<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.com.lafemmeapp.lafemmeapp.presentation.login.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <include layout="@layout/activity_base" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/login_header_txt"
            android:textColor="@color/greyishBrown"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_line_form_top"
            android:hint="@string/et_email_label"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_input_form_registry"
            android:textColorHint="@color/greyish"
            android:textSize="@dimen/registry_form_txt_size" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_line_form_bottom"
            android:hint="@string/et_pwd_label"
            android:inputType="textPassword"
            android:padding="@dimen/padding_input_form_registry"
            android:textColorHint="@color/greyish"
            android:textSize="@dimen/registry_form_txt_size" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_button_disable_rounded_background"
            android:text="@string/login_label"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="2dp"
            android:id="@+id/tv_forgot_password"
            android:gravity="center"
            android:text="@string/forgot_pwd_label"
            android:textColor="@color/pinkishGreyTwo"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="15dp"
                android:layout_margin="5dp"
                android:layout_weight="0.9"
                android:background="@drawable/separator_line" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/contextual_info_other_logins"
                android:textColor="@color/warmGrey" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="fill_parent"
                android:layout_height="15dp"
                android:layout_margin="5dp"
                android:layout_weight="0.9"
                android:background="@drawable/separator_line" />


        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone">

        </com.google.android.gms.common.SignInButton>


        <Button
            android:id="@+id/btn_fbk_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/main_button_rounded_fb"
            android:drawableLeft="@drawable/ic_facebook_app_logo"
            android:paddingLeft="24dp"
            android:text="@string/btn_fb_label"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>
