<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="1">


    <ImageView
        android:layout_width="0dp"
        android:id="@+id/iv_left_token"
        android:layout_height="match_parent"
        android:layout_weight="0.04"
        android:background="@color/whiteTwo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.86"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_label2"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textColor="@color/greyish"
            android:textSize="16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_label"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_label"
            android:textColor="@color/greyish"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_show_appoitments_detail"
        android:layout_width="0dp"
        android:layout_marginRight="10dp"
        android:layout_height="15dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.1"
        android:src="@drawable/ic_show_appoitment_detail" />
</LinearLayout>
